Fixed Readability on Bigger Screens

--- a/tailwind.css
+++ b/tailwind.css
@@ -549,6 +549,11 @@ video {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
+.from-blue-500{
+  --tw-gradient-from: #3b82f6;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(59, 130, 246, 0));
+}
+
 .from-cyan-300{
   --tw-gradient-from: #67e8f9;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(103, 232, 249, 0));
@@ -589,6 +594,10 @@ video {
 
 .to-gray-1200{
   --tw-gradient-to: #0F070C;
+}
+
+.to-gray-newCardsTo{
+  --tw-gradient-to: #140F16;
 }
 
 .to-lightBlue-400{
@@ -884,24 +893,6 @@ video {
   }
 }
 
-.backdrop-filter{
-  --tw-backdrop-blur: var(--tw-empty,/*!*/ /*!*/);
-  --tw-backdrop-brightness: var(--tw-empty,/*!*/ /*!*/);
-  --tw-backdrop-contrast: var(--tw-empty,/*!*/ /*!*/);
-  --tw-backdrop-grayscale: var(--tw-empty,/*!*/ /*!*/);
-  --tw-backdrop-hue-rotate: var(--tw-empty,/*!*/ /*!*/);
-  --tw-backdrop-invert: var(--tw-empty,/*!*/ /*!*/);
-  --tw-backdrop-opacity: var(--tw-empty,/*!*/ /*!*/);
-  --tw-backdrop-saturate: var(--tw-empty,/*!*/ /*!*/);
-  --tw-backdrop-sepia: var(--tw-empty,/*!*/ /*!*/);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.backdrop-blur-2xl{
-  --tw-backdrop-blur: blur(40px);
-}
-
 .hide-scroll-bar {
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -909,90 +900,6 @@ video {
 
 .hide-scroll-bar::-webkit-scrollbar {
   display: none;
-}
-
-.border-gradient-pink-yellow {
-  position:relative;
-}
-
-.border-gradient-pink-yellow::before {
-  content:"";
-  position:absolute;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  border-radius:0.5rem;
-  padding:1px;
-  background: linear-gradient(to right,#A9458C,#FFC64B);
-  -webkit-mask: 
-                linear-gradient(#fff 0 0) content-box, 
-                linear-gradient(#fff 0 0);
-  -webkit-mask-composite: destination-out;
-  mask-composite: exclude;
-}
-
-.border-gradient-blue {
-  position:relative;
-}
-
-.border-gradient-blue::before {
-  content:"";
-  position:absolute;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  border-radius:0.5rem;
-  padding:1px;
-  background: linear-gradient(to right,#51C3C2,#093D86);
-  -webkit-mask: 
-                linear-gradient(#fff 0 0) content-box, 
-                linear-gradient(#fff 0 0);
-  -webkit-mask-composite: destination-out;
-  mask-composite: exclude;
-}
-
-.border-gradient-green-blue {
-  position:relative;
-}
-
-.border-gradient-green-blue::before {
-  content:"";
-  position:absolute;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  border-radius:0.5rem;
-  padding:1px;
-  background: linear-gradient(to right,#36E09D,#4CBAF4);
-  -webkit-mask: 
-                linear-gradient(#fff 0 0) content-box, 
-                linear-gradient(#fff 0 0);
-  -webkit-mask-composite: destination-out;
-  mask-composite: exclude;
-}
-
-.border-gradient-violet-blue {
-  position:relative;
-}
-
-.border-gradient-violet-blue::before {
-  content:"";
-  position:absolute;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  border-radius:0.5rem;
-  padding:1px;
-  background: linear-gradient(to right,#A259FF,#1ABCFE);
-  -webkit-mask: 
-                linear-gradient(#fff 0 0) content-box, 
-                linear-gradient(#fff 0 0);
-  -webkit-mask-composite: destination-out;
-  mask-composite: exclude;
 }
 
 @media (min-width: 640px){
@@ -1120,9 +1027,26 @@ video {
 }
 
 @media (min-width: 1280px){
+  .xl\:h-60{
+    height: 15rem;
+  }
+
+  .xl\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
   .xl\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .xl\:text-smp{
+    font-size: 0.825rem;
+  }
+
+  .xl\:leading-snug{
+    line-height: 1.375;
   }
 
   .xl\:leading-normal{
